# RoboCup

./: README.MD
TrainTools/: .gitignore  README.md  requirements.txt
TrainTools/notebooks/: baiduImage.ipynb  coco_to_yolo.py  convert.md  dataset.ipynb  enhanceIndentify.py  enhanceMeasure.py  measureDemo.ipynb  shot.py  split_train_val.py  train.ipynb
rosws/: .gitignore
rosws/src/: .gitignore
rosws/src/dynamic_cup/: CMakeLists.txt  package.xml
rosws/src/dynamic_cup/cfg/: My_cfg.cfg
rosws/src/dynamic_cup/src/: server.cpp
rosws/src/mv_driver/src/: mv_driver.cpp
rosws/src/plane_extract/: CMakeLists.txt  package.xml
rosws/src/plane_extract/scripts/: listener.py
rosws/src/plane_extract/src/: plane_extract.cpp
rosws/src/rc_msgs/: CMakeLists.txt  package.xml
rosws/src/rc_msgs/cfg/: stepConfig.cfg
rosws/src/rc_msgs/msg/: raw_img.msg  raw_img_depth.msg  results.msg  step.msg
rosws/src/scheduler/: CMakeLists.txt  package.xml
rosws/src/scheduler/clipper/: CMakeLists.txt
rosws/src/scheduler/include/scheduler/: identify.h  interface.h  measure.h  tcpClient.h
rosws/src/scheduler/src/: identify.cpp  interface.cpp  main.cpp  measure.cpp  server.cpp  tcpClient.cpp
rosws/src/ui/: CMakeLists.txt
rosws/src/ui/include/ui/: qnode.hpp
rosws/src/ui/launch/: identify.launch  identify_v5.launch
rosws/src/ui/src/: main.cpp  main_window.cpp  qnode.cpp
rosws/src/video_pub/: CMakeLists.txt
rosws/src/video_pub/src/: video_pub.cpp
rosws/src/yolo_identify/: CMakeLists.txt  path.cmake
rosws/src/yolo_identify/include/yolo/: yololayer.h
rosws/src/yolo_identify/src/: calibrator.cpp  yolov5.cpp  yolov7.cpp
rosws/src/yolo_measure/: CMakeLists.txt  package.xml
rosws/src/yolo_measure/include/yolo/: yololayer.h
rosws/src/yolo_measure/src/: yolov5.cpp
yolov7trt/: .gitignore  CMakeLists.txt
yolov7trt/src/: main.cpp  yolo.cu
